# AgentCommander

./: .gitignore  README.md  ac.bat  ac.sh  braindump.md  pyproject.toml
.claude/: settings.json  settings.local.json
resources/: typecast-openrouter-free.json  typecast-openrouter-paid.json
resources/prompts/: ARCHITECT.md  CODER.md  CRITIC.md  DATA_ANALYST.md  DEBUGGER.md  ORCHESTRATOR.md  PLANNER.md  POSTMORTEM.md  PREFLIGHT.md  RECIPES.md  REFACTORER.md  RESEARCHER.md  REVIEWER.md  ROUTER.md  SUMMARIZER.md  TESTER.md  TOOLS.md  TRANSLATOR.md  VISION.md
src/agentcommander/: __init__.py  __main__.py  chat_log.py  cli.py  model_stats.py  registry.py  types.py
src/agentcommander/agents/: __init__.py  manifest.py  prompts.py
src/agentcommander/db/: __init__.py  connection.py  repos.py  schema.sql
src/agentcommander/engine/: __init__.py  actions.py  engine.py  live_tee.py  meta_agents.py  role_call.py  role_resolver.py  scratchpad.py
src/agentcommander/engine/guards/: __init__.py  decision_guards.py  done_guards.py  execute_guards.py  fetch_guards.py  (+5 more)
src/agentcommander/providers/: __init__.py  base.py  bootstrap.py  capability_hints.py  llamacpp.py  ollama.py  openrouter.py
src/agentcommander/safety/: __init__.py  dangerous_patterns.py  host_validator.py  prompt_injection.py  sandbox.py
src/agentcommander/tools/: __init__.py  browser_tool.py  code_tool.py  dispatcher.py  env_tool.py  file_tool.py  git_tool.py  http_tool.py  process_tool.py  types.py  web_tool.py
src/agentcommander/tui/: __init__.py  ansi.py  app.py  autocomplete.py  commands.py  markdown.py  mirror.py  mouse_input.py  permissions.py  popouts.py  render.py  setup.py  status_bar.py  terminal_input.py
src/agentcommander/typecast/: __init__.py  agent_requirements.py  autoconfig.py  catalog.py  openrouter_catalog.py  vram.py
tests/: test_live_data_inference.py  test_popouts.py  test_round4_features.py  test_safety.py  test_shell_in_wrong_language.py
