[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcommander"
version = "0.1.0"
description = "Local multi-agent LLM orchestration CLI — unofficial Python port of EngineCommander internals"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "sixoffive" }]
license = { text = "UNLICENSED" }
keywords = ["llm", "agents", "ollama", "cli", "tui"]

dependencies = [
    "prompt-toolkit>=3.0.47",
    "rich>=13.7",
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
ac = "agentcommander.cli:main"
agentcommander = "agentcommander.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentcommander = ["py.typed"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
