[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcommander"
version = "0.1.0"
description = "Local multi-agent LLM orchestration CLI — pure-stdlib Python port of EngineCommander internals"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "sixoffive" }]
license = { text = "UNLICENSED" }
keywords = ["llm", "agents", "ollama", "cli", "tui"]

# Pure stdlib — zero runtime dependencies.
dependencies = []

[project.scripts]
ac = "agentcommander.cli:main"
agentcommander = "agentcommander.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
